Added new buttons.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </video>
             </div>
 
-            <div class="splash-text flex-vcenter pad">
+            <div class="splash-text flex-vcenter center pad">
                 <h2 class="headline">
                     Think you're ready to vote in the 2015 Canadian Election?
                 </h2>
@@ -41,23 +41,24 @@
                     <strong>You might not be.</strong> The requirements have changed.
                 </h2>
 
-                        <button class="btn cta-button">
-                            Get the Election Survival Guide
-                        </button>
-                        <p class="urgency-statement" id="urgency-statement">
-                            Hurry! Online voter registration closes in <strong id="registration-countdown"></strong>.
+                <button class="add-margin-bottom">
+                    Get the Election Survival Guide
+                </button>
 
-                            <script type="text/javascript">
-                            $("#registration-countdown")
-                            .countdown("2015/10/13", function(event) {
-                                $(this).text(
-                                    event.strftime('%D days %H hours, %M minutes, %S seconds')
-                                );
-                            });
-                            </script>
-                        </p>
+                <p class="urgency-statement" id="urgency-statement">
+                    Hurry! Online voter registration closes in <strong id="registration-countdown"></strong>.
 
-                    
+                    <script type="text/javascript">
+                    $("#registration-countdown")
+                    .countdown("2015/10/13", function(event) {
+                        $(this).text(
+                            event.strftime('%D days %H hours, %M minutes, %S seconds')
+                        );
+                    });
+                    </script>
+                </p>
+
+
             </div>
 
         </div>
@@ -125,7 +126,7 @@
             <div class="container">
                 <div class="col-sm-6">
                     <div class="bullet-info-area">
-                      <h2>This is just the tip of the iceberg. </h2>
+                        <h2>This is just the tip of the iceberg. </h2>
                         <p>
                             Did you know that:
                             <ul>
@@ -137,14 +138,14 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="cta-area">
+                    <div class="cta-area center">
                         <p class="pre-cta">We're looking into these issues so you don't have to.</p>
 
-                        <button class="btn cta-button">
+                        <button class="add-margin-bottom">
                             Sign Up
                         </button>
-                        
-                      <p class="pre-cta">We won't spam you. We're here to help.</p>
+
+                        <p class="pre-cta">We won't spam you. We're here to help.</p>
                     </div>
                 </div>
             </div>
@@ -176,12 +177,12 @@
 
         <!--Get Involved Section-->
         <div class="row color2-background">
-            <div class="container">
-                <h2 class="center">
+            <div class="container center">
+                <h2>
                     You've got the Right2Vote
                 </h2>
 
-                <button class="btn cta-button">
+                <button>
                     Get Involved
                 </button>
 
