--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <p>
                             Did you know that:
                             <ul>
-                                <li>The geogrpahical layouts of the ridings have changed.</li>
+                                <li>The geographical layouts of the ridings have changed.</li>
                                 <li>Elections Canada is limited in its ability to promote voting.</li>
                                 <li>You can no longer vouch for multiple people's identities.</li>
                             </ul>
