Mess with the footer copy.

--- a/index.html
+++ b/index.html
@@ -190,25 +190,29 @@
 
         <!--Get Involved Section-->
         <div class="row color2-background">
-            <div class="container center">
-                <h2>
-                    You've got the Right2Vote
-                </h2>
+            <div class="container">
 
-                <button>
+                
+                                <h3 class="center">
+                    Think you've got something to bring to the table? 
+                </h3>
+
+                <button class="block-center">
                     Get Involved
                 </button>
+                
+                <h3 class="center">We're vegan-friendly <strong>;)</strong></h3>
 
-                <h3 class="center">
-                    We always need more help
-                </h3>
+
             </div>
         </div>
         <!--Get Involved Section End-->
 
         <!--Organization Section-->
         <div class="row center color1-background">
-            Copyright 2015 the Yolo Committee
+                <h2>
+                    Protect your <strong>Right to Vote</strong>
+                </h2>
         </div>
         <!--Organization Section End-->
 
