Added quote to bottom of iceberg.

--- a/index.html
+++ b/index.html
@@ -171,35 +171,40 @@
 
 
         <!--Iceberg Section-->
-        <div class="row color4-background iceberg-background">
+        <div class="row color4-background iceberg">
             <div class="container">
-                <div class="col-sm-6">
-                    <div class="bullet-info-area">
-                        <h2>This is just the tip of the iceberg. </h2>
-                        <p>
-                            Did you know that:
-                            <ul>
-                                <li>The geographical layouts of the ridings have changed.</li>
-                                <li>Elections Canada is limited in its ability to promote voting.</li>
-                                <li>You can no longer vouch for multiple people's identities.</li>
-                            </ul>
-                            The list goes on...
-                        </p>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="bullet-info-area">
+                            <h2>This is just the tip of the iceberg. </h2>
+                            <p>
+                                Did you know that:
+                                <ul>
+                                    <li>The geographical layouts of the ridings have changed.</li>
+                                    <li>Elections Canada is limited in its ability to promote voting.</li>
+                                    <li>You can no longer vouch for multiple people's identities.</li>
+                                </ul>
+                                The list goes on...
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="cta-area center">
-                        <p class="pre-cta">We're looking into these issues so you don't have to.</p>
+                    <div class="col-sm-6">
+                        <div class="cta-area center">
+                            <p class="pre-cta">We're looking into these issues so you don't have to.</p>
 
-                        <button class="add-margin-bottom">
-                            Sign Up
-                        </button>
+                            <button class="add-margin-bottom">
+                                Sign Up
+                            </button>
 
-                        <p class="pre-cta">We won't spam you. We're here to help.</p>
+                            <p class="pre-cta">We won't spam you. We're here to help.</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
+            <div class="row center white iceberg-bottom">
+                <h2>“It is essential to understand that the main challenge for our electoral democracy is not voter fraud, but voter participation. I do not believe that if we eliminate vouching and the [information card] as a proof of address, we will have in any way improved the integrity of the voting process. However, we will have taken away the ability of many qualified electors to vote.” - Marc Mayrand, Chief Electoral Officer of Elections Canada</h2>
+            </div>
 
         </div>
         <!--Iceberg Section End-->
