Working on header spacing and spacing in general.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 
                     <div class="col-md-6">
                         <h3 class="white">Don't worry, we've got your back.  We'll help you sign up.</h3>
-                        <br/>
                         <button class="add-margin-bottom">
                             Get the Election Survival Guide
                         </button>
@@ -98,7 +97,7 @@
 
 
         <!--Above the fold-->
-        <div class="row">
+        <div class="row no-pad-bottom">
             <div class="container">
                 <h2 class="center">
                     The biggest change: you'll need an ID with your <strong>current address.</strong>
@@ -109,7 +108,7 @@
         <!--Above the fold End-->
 
         <!--Three Point-->
-        <div class="row">
+        <div class="row no-pad-top">
             <div class="container">
                 <div class="point-container col-sm-4">
                     <div class="point-inner">
@@ -180,11 +179,11 @@
                         <div class="cta-area center">
                             <h2 class="">We're looking into these issues so you don't have to.</h2>
 
-                            <button class="add-margin-bottom">
+                            <button>
                                 Sign Up
                             </button>
 
-                            <h2>We won't spam you. We're here to help.</h2>
+                            <h2 class="no-bottom">We won't spam you.<br/> We're here to help.</h2>
                         </div>
                     </div>
                 </div>
@@ -209,15 +208,15 @@
         <!--Share Section-->
         <div class="row">
             <div class="container">
-                <div>
-                    <h2 class="center">
-                        Help us spread the word. We're trying to help as many Canadians vote as possible.
-                    </h2>
-                </div>
+
+                <h2 class="center">
+                    Help us spread the word.</br>
+                    We're trying to help as many Canadians vote as possible.
+                </h2>
 
                 <br/>
 
-                <div class="share-container">
+                <div class="share-container add-margin-bottom">
                     <span class='st_sharethis_vcount' displayText='ShareThis'></span>
                     <span class='st_facebook_vcount' displayText='Facebook'></span>
                     <span class='st_twitter_vcount' displayText='Tweet'></span>
@@ -227,7 +226,7 @@
                 </div>
 
 
-                <h3 class="center">You don't want your friends to get left out in the cold, do you?</h3>
+                <h3 class="center no-bottom">You don't want your friends to get left out in the cold, do you?</h3>
             </div>
         </div>
         <!--Share Section End-->
@@ -235,8 +234,6 @@
         <!--Get Involved Section-->
         <div class="row color4-background">
             <div class="container">
-
-
                 <h3 class="center">
                     Think you've got something to bring to the table?
                 </h3>
@@ -245,16 +242,14 @@
                     Get Involved
                 </button>
 
-                <h3 class="center">We're vegan-friendly <strong>;)</strong></h3>
-
-
+                <h3 class="center no-bottom">We're vegan-friendly <strong>;)</strong></h3>
             </div>
         </div>
         <!--Get Involved Section End-->
 
         <!--Organization Section-->
         <div class="row center color4-shadow-background">
-            <h2>
+            <h2 class="no-bottom">
                 Protect your <strong>Right to Vote</strong>
             </h2>
         </div>
