Fixing up layout.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
             <div class="container">
                 <div class="row center no-pad-bottom">
+                    <br/>
                     <h2 class="white">
                         Think you're ready to vote in the 2015 Canadian Election?
                     </h2>
@@ -76,11 +77,11 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 sign-up">
                         <h3 class="white center">Don't worry, we've got your back.  We'll help you sign up.</h3>
-                        <input></input>
+                        <input placeholder="Your Email"></input>
                         <br/><br/>
-                        <button class="add-margin-bottom">
+                        <button>
                             Get the Election Survival Guide
                         </button>
                     </div>
