Added Sign Up button in navbar

--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
                         <a href="#">OPtion2</a>
                     </li>
                     <li>
-                        <a href="#">Option3</a>
-                    </li>
-                    <li class="active">
-                        <a href="#">OPtion4</a>
+                        <button>
+                            Sign Up
+                        </button>
                     </li>
                 </ul>
             </nav>
