Add new logo, tweets + facebook

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300|Roboto:300,300italic,500italic,500' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
-
     <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
         <div class="container">
             <div class="navbar-header">
@@ -26,15 +26,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="./" class="navbar-brand">Right2Vote</a>
+                <a href="./" class="navbar-brand"><img class="navbar-logo" src="img/r2v.png"></img></a>
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">Option1</a>
+                        <a href="#">Follow us on</a>
                     </li>
                     <li>
-                        <a href="#">OPtion2</a>
+                        <a href="https://www.twitter.com/right2voteCA" target="_blank"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/right2votecanada" target="_blank"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="#">and</a>
                     </li>
                     <li>
                         <button>
@@ -254,7 +260,7 @@
         <!--Organization Section-->
         <div class="row center color4-shadow-background">
             <h2 class="no-bottom">
-                Protect your <strong>Right to Vote</strong>
+                Protect your <img class="bottom-logo" src="img/r2v.png"></img>
             </h2>
         </div>
         <!--Organization Section End-->
